--- a/string.ipynb
+++ b/string.ipynb
@@ -303,7 +303,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "methods\n",
+    "\n",
+    "\n",
+    "formatting\n",
+    "utility\n",
+    "validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "story = \"once upon a time there was a kingdome where people lived, the end\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ONCE UPON A TIME THERE WAS A KINGDOME WHERE PEOPLE LIVED, THE END'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "story.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'once upon a time there was a kingdome where people lived, the end'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "story.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Once upon a time there was a kingdome where people lived, the end'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "story.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Once Upon A Time There Was A Kingdome Where People Lived, The End'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "story.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ONCE UPON A TIME THERE WAS A KINGDOME WHERE PEOPLE LIVED, THE END'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "story.swapcase()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'oNCE uPON a tIME tHERE wAS a kINGDOME wHERE pEOPLE lIVED, tHE eND'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "story.title( ).swapcase()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ONCE UPON A TIME THERE WAS A KINGDOME WHERE PEOPLE LIVED, THE END\n"
+     ]
+    }
+   ],
+   "source": [
+    "story = story.upper()\n",
+    "print(story)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vijay deenanath chauhan                                                                             \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name.ljust(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "?????????????????????????????????????????????????????????????????????????????vijay deenanath chauhan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name.rjust(100,'?'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****************ONCE UPON A TIME THERE WAS A KINGDOME WHERE PEOPLE LIVED, THE END******************\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(story.center(100 ,'*'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -451,6 +663,536 @@
    ],
    "source": [
     "name[7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name is invalid\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('who are you?')\n",
+    "if not name.isalpha():\n",
+    "    print('name is invalid')\n",
+    "else:\n",
+    "     print('good')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = input('who are you?')\n",
+    "name.isalpha()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"0987678\" .isnumeric()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good job\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = input(\"enter a number:\")\n",
+    "if number.isnumeric():\n",
+    "    print(\"good job\")\n",
+    "else:\n",
+    "    print(\"you don't know the number\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = \"myfile.png\"\n",
+    "x.endswith('png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome dr\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"dr john smith\"\n",
+    "if name.startswith('dr'):\n",
+    "    print(\"welcome dr\")\n",
+    "else:\n",
+    "    print('welcome')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "important stuff below\n",
+    "\n",
+    "split\n",
+    "join\n",
+    "strip\n",
+    "replace\n",
+    "count\n",
+    "find"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ONCE', 'UPON', 'A', 'TIME', 'THERE', 'WAS', 'A', 'KINGDOME', 'WHERE', 'PEOPLE', 'LIVED,', 'THE', 'END']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words=story.split()\n",
+    "print(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ONCE UPON A TIME THERE WAS A KINGDOME WHERE PEOPLE LIVED', ' THE END']"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "story.split(\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ONCE UPON A TIME THERE WAS A KINGDOME WHERE PEOPLE LIVED, THE END']"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "story.split('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(story.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is a list'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "message = ['this', 'is', 'a', 'list']\n",
+    "' '.join(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this>>>is>>>a>>>list'"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "message = ['this', 'is', 'a', 'list']\n",
+    "'>>>'.join(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20      56789768 567   \n",
+      "12 56789768 567\n"
+     ]
+    }
+   ],
+   "source": [
+    "password = input('enter the password')\n",
+    "print(len(password), password)\n",
+    "password = password.strip()\n",
+    "print(len(password), password)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ONCE UPON A TIME THERE WAS A KINGDOME WHERE PEOPLE LIVED, THE END'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "story"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ONCA UPON A TIMA THARA WAS A KINGDOMA WHARA PAOPLA LIVAD, THA AND'"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "story.replace('E', 'A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ONCE UPON A TIME  RE WAS A KINGDOME WHERE PEOPLE LIVED,   END'"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "story.replace(\"THE\", ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "another_story = \"this is an example of another story, this story is not simple and is not very long, but it is a story\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'another_story' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Aliya\\OneDrive\\Desktop\\aliya's python\\string.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Aliya/OneDrive/Desktop/aliya%27s%20python/string.ipynb#ch0000002?line=0'>1</a>\u001b[0m another_story\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39mstory\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'another_story' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "another_story.find('story') #will find first accurance only "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "another_story.count('is')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "another_story.count('is')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is  n ex mple\n",
+      "this is  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n"
+     ]
+    }
+   ],
+   "source": [
+    "#removing all vowels\n",
+    "msg = input(\"enter something:\")\n",
+    "for v in 'aeiouAEIOU':\n",
+    "    msg = msg.replace(v, \" \")\n",
+    "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "and => 2\n",
+      "this => 2\n",
+      "that => 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = input('enter something')\n",
+    "words = set(msg.split())\n",
+    "for w in words :\n",
+    "    c = msg.count(w)\n",
+    "    print(w,'=>',c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "story found at position 30\n",
+      "story found at position 42\n",
+      "story found at position 96\n"
+     ]
+    }
+   ],
+   "source": [
+    "story = \"\"\"this is an example of another story,\n",
+    "this story is not simple and is not very long,\n",
+    "but it is a story\"\"\"\n",
+    "\n",
+    "q = input('enter search term:')\n",
+    "start = 0    \n",
+    "while True:\n",
+    "    idx = story.find(q,start)\n",
+    "    if idx == -1:       \n",
+    "        break\n",
+    "    print(f'{q} found at position {idx}')\n",
+    "    start = idx + 1      #to update the next value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "th3s 3s 1n 2x1mpl2 4f 1n4th2r st4ry,\n",
+      "th3s st4ry 3s n4t s3mpl2 1nd 3s n4t v2ry l4ng,\n",
+      "b5t 3t 3s 1 st4ry\n"
+     ]
+    }
+   ],
+   "source": [
+    "story = \"\"\"this is an example of another story,\n",
+    "this story is not simple and is not very long,\n",
+    "but it is a story\"\"\"\n",
+    "\n",
+    "\n",
+    "for v in \"aeiouAEIOU\":\n",
+    "    if v =='a' or v == 'A':\n",
+    "        story = story.replace(v, '1')\n",
+    "    if v == 'e' or v == 'E':\n",
+    "        story = story.replace(v, '2')\n",
+    "    if v == 'i' or v == 'I' :\n",
+    "        story = story.replace(v,'3')\n",
+    "    if v == 'o' or v == 'O':\n",
+    "        story = story.replace(v, '4')\n",
+    "    if v == 'u' or v == 'V':\n",
+    "        story = story.replace(v, '5')\n",
+    "print(story)          "
    ]
   }
  ],
