--- a/string.ipynb
+++ b/string.ipynb
@@ -846,18 +846,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['ONCE UPON A TIME THERE WAS A KINGDOME WHERE PEOPLE LIVED, THE END']"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'story' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Aliya\\OneDrive\\Desktop\\aliya's python\\string.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Aliya/OneDrive/Desktop/aliya%27s%20python/string.ipynb#ch0000001?line=0'>1</a>\u001b[0m story\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39ma\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'story' is not defined"
+     ]
     }
    ],
    "source": [
