--- a/string-DESKTOP-ED0HS3P.ipynb
+++ b/string-DESKTOP-ED0HS3P.ipynb
@@ -7,52 +7,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "w1 = \"being human\"\n",
-    "w2 = 'community'\n",
-    "print(w1[-5:] + w2[-3:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w1 = \"being human\"\n",
-    "w2 = 'community'\n",
-    "print(w1[-5:] + w2[-3:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -561,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -775,6 +729,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python keywords are...\n",
+      "['False', 'None', 'True', '__peg_parser__', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program to print the list of all keywords\n",
+    "\n",
+    "# importing the module\n",
+    "import keyword\n",
+    "\n",
+    "# printing the keywords\n",
+    "print(\"Python keywords are...\")\n",
+    "print(keyword.kwlist)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1>>2>>3>>4yay"
+     ]
+    }
+   ],
+   "source": [
+    "print(1,2,3,4, sep='>>', end='yay')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1843774436.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [4]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(this is very good)\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(this is very good)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 83,
    "metadata": {},
    "outputs": [
@@ -892,18 +913,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['ONCE UPON A TIME THERE WAS A KINGDOME WHERE PEOPLE LIVED, THE END']"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'story' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Aliya\\OneDrive\\Desktop\\aliya's python\\string.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Aliya/OneDrive/Desktop/aliya%27s%20python/string.ipynb#ch0000001?line=0'>1</a>\u001b[0m story\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39ma\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'story' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1064,18 +1086,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'another_story' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Aliya\\OneDrive\\Desktop\\aliya's python\\string.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Aliya/OneDrive/Desktop/aliya%27s%20python/string.ipynb#ch0000002?line=0'>1</a>\u001b[0m another_story\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39mstory\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'another_story' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1121,9 +1144,130 @@
    "source": [
     "another_story.count('is')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is  n ex mple\n",
+      "this is  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n",
+      "th s  s  n  x mpl \n"
+     ]
+    }
+   ],
+   "source": [
+    "#removing all vowels\n",
+    "msg = input(\"enter something:\")\n",
+    "for v in 'aeiouAEIOU':\n",
+    "    msg = msg.replace(v, \" \")\n",
+    "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "and => 2\n",
+      "this => 2\n",
+      "that => 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = input('enter something')\n",
+    "words = set(msg.split())\n",
+    "for w in words :\n",
+    "    c = msg.count(w)\n",
+    "    print(w,'=>',c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "story found at position 30\n",
+      "story found at position 42\n",
+      "story found at position 96\n"
+     ]
+    }
+   ],
+   "source": [
+    "story = \"\"\"this is an example of another story,\n",
+    "this story is not simple and is not very long,\n",
+    "but it is a story\"\"\"\n",
+    "\n",
+    "q = input('enter search term:')/\n",
+    "start = 0    \n",
+    "while True:\n",
+    "    idx = story.find(q,start)\n",
+    "    if idx == -1:       \n",
+    "        break\n",
+    "    print(f'{q} found at position {idx}')\n",
+    "    start = idx + 1      #to update the next value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "th3s 3s 1n 2x1mpl2 4f 1n4th2r st4ry,\n",
+      "th3s st4ry 3s n4t s3mpl2 1nd 3s n4t v2ry l4ng,\n",
+      "b5t 3t 3s 1 st4ry\n"
+     ]
+    }
+   ],
+   "source": [
+    "story = \"\"\"this is an example of another story,\n",
+    "this story is not simple and is not very long,\n",
+    "but it is a story\"\"\"\n",
+    "\n",
+    "\n",
+    "for v in \"aeiouAEIOU\":\n",
+    "    if v =='a' or v == 'A':\n",
+    "        story = story.replace(v, '1')\n",
+    "    if v == 'e' or v == 'E':\n",
+    "        story = story.replace(v, '2')\n",
+    "    if v == 'i' or v == 'I' :\n",
+    "        story = story.replace(v,'3')\n",
+    "    if v == 'o' or v == 'O':\n",
+    "        story = story.replace(v, '4')\n",
+    "    if v == 'u' or v == 'V':\n",
+    "        story = story.replace(v, '5')\n",
+    "print(story)          "
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "19d1d53a962d236aa061289c2ac16dc8e6d9648c89fe79f459ae9a3493bc67b4"
+  },
   "kernelspec": {
    "display_name": "Python 3.9.12 ('base')",
    "language": "python",
